Small HTML tidy up

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -185,66 +185,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="column">
-                            <div class="card">
-                                <div class="card-image">
-                                    <figure class="image is-2by1">
-                                        <img src="../../resources/media/images/cr4te_logo.png" alt="Cr4te Logo">
-                                    </figure>
-                                </div>
-                                <div class="card-content">
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <figure class="image is-48x48">
-                                                <img src="https://vignette.wikia.nocookie.net/overwatch/images/9/9a/Pi_lootbox.png" alt="Cr4te Icon">
-                                            </figure>
-                                        </div>
-                                        <div class="media-content">
-                                            <p class="title is-5 has-text-black">Team Loot Cr4te</p>
-                                        </div>
-                                    </div>
-                                    <div class="content">
-                                        <p class="subtitle is-6 has-text-dark"><b>SR range:</b> 2900-3500 SR</p>
-                                        <p>We’re the highest SR roster and have been in existence for over 6 months, scrimming 3 times a week.</p>
-                                        <a><b>Captain:</b> <code>crossfade</code></a>
-                                        <br>
-                                        <a><b>Staff Contact:</b> <code>crossfade</code></a>
-                                        <br>
-                                        <a><b>Coach:</b> <code>Cameron</code></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="card">
-                                <div class="card-image">
-                                <figure class="image is-square">
-                                    <img src="https://cdn.discordapp.com/attachments/565109107124600832/565195552669696058/Happy_Squid.PNG" alt="Squids Logo">
-                                </figure>
-                                </div>
-                                <div class="card-content">
-                                    <div class="media">
-                                        <div class="media-left">
-                                        <figure class="image is-48x48">
-                                            <img src="https://vignette.wikia.nocookie.net/overwatch/images/8/81/Pi_happysquid.png" alt="Squids Icon">
-                                        </figure>
-                                        </div>
-                                        <div class="media-content">
-                                        <p class="title is-5 has-text-black">Team Happy 5quids</p>
-                                        </div>
-                                    </div>
-                                    <div class="content">
-                                        <p class="subtitle is-6 has-text-dark"><b>SR range:</b> 2500-3000 SR (new applicants must be &lt;3000 SR)</p>
-                                        <p><blockquote>"A new team to enter the server with a BANG"</blockquote> - Dinuh 2k19</p>
-                                        <a><b>Captain:</b> <code>Syntax</code>, <code>Jeskiimo</code></a>
-                                        <br>
-                                        <a><b>Staff Contact:</b> <code>Ghost <s>(tGc)</s></code></a>
-                                        <br>
-                                        <a><b>Coach:</b> <code>Cameron</code></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="column">
                                 <div class="card">
                                     <div class="card-image">
@@ -283,7 +223,7 @@
             <div class="hero-body">
                 <div class="container">
                     <img src="https://cdn.discordapp.com/attachments/549305614241628161/556162214202179614/apps.png" alt="No Decay Applications Banner" />
-                    <p>If your interested in playing on one of our teams or coaching the please fill out the appropreate application below.</p>
+                    <p>If you are interested in playing on one of our teams or coaching then please fill out the appropriate application below.</p>
                     <hr>
                     <div class="columns">
                         <div class="column">
@@ -337,9 +277,8 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2500</p>
                                                                     <p>
-                                                                        Owner and creator of the server Jelly is Mum. She keeps the staff in check and oversees everything running smoothly. Flexes for Team T2raining Bots.
+                                                                        Owner and creator of the server. She keeps the staff in check and oversees everything running smoothly. Flexes for Team T2raining Bots.
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
@@ -371,7 +310,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2750</p>
                                                                     <p>
                                                                         Head of tech. He is left brain of the operation. Manages the bots (primarily BOB), roles and other technical things on the server.
                                                                     </p>
@@ -411,7 +349,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 4400</p>
                                                                     <p>
                                                                         Manages all of the coaches. Vet's new coaches and used to coach Team T2ranining Bots. Everyone wants him as coach<i>!</i>
                                                                     </p>
@@ -452,7 +389,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 3300</p>
                                                                     <p>
                                                                         Works with <code>Noirox#8119</code>, <code>Syntax (Josh B)#2481</code> and <code>finiesta#2479</code> to manage the coaches. Captains Team Loot Cr4te.
                                                                     </p>
@@ -486,11 +422,9 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2300</p>
                                                                     <p>
-                                                                        Manages Team Ram3n and owns Team Rh1no. Best main support on Team T2raining Bots and shot calls for Team T2raining Bots.
+                                                                        Manages Team Ram3n and owns Team Rh1no. Main support on Team T2raining Bots and shot calls for Team T2raining Bots.
                                                                     </p>
-                                                                    <!-- <3 -->
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
                                                                     <ul>
@@ -522,7 +456,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2900</p>
                                                                     <p>
                                                                         Works with <code>crossfade#5886</code>, <code>Syntax (Josh B)#2481</code> and <code>finiesta#2479</code> to manage the coaches.
                                                                     </p>
@@ -556,7 +489,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2500</p>
                                                                     <p>
                                                                         Assists the admins with the running of the server and does general house keeping. Also, streams, a lot. Apparently...
                                                                     </p>
@@ -590,7 +522,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 3500</p>
                                                                     <p>
                                                                         Give some great advice to the other staff. If you want players or coaches, this is your man. (He works in recruitment.) Helps GM Rh1no by being bad cop. :P 
                                                                     </p>
@@ -624,7 +555,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2750</p>
                                                                     <p>
                                                                         PUG moderator. TGC helps keep the PUGs running nice and smoothly. His off-tank is pretty smooth as well.
                                                                     </p>
@@ -658,7 +588,6 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="content">
-                                                                    <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2100</p>
                                                                     <p>
                                                                         Technical moderator. This guy builds our website and sometimes works on BOB when <code>BadRabbits#2545</code> lets him.
                                                                     </p>
@@ -730,10 +659,6 @@
                                 this
                             </a>
                             work.
-                            <!-- <br />
-                            Permissions beyond the scope of this license may be available  
-                            <a xmlns:cc="http://creativecommons.org/ns#" href="mailto:t54@tutanota.com?subject=Use%20of%2030doc%20Content%20Outside%20of%20Licence&body=Hi%20there%20T54!%0A%0AI'd%20like%20to%20use%20the%20content%20of%2030doc%20outside%20of%20the%20bounds%20of%20the%20CC-BY-NC-SA%20license.%20%0A%0A%3CAdd%20you%20own%20text%20here%3E%20%0A%0AHave%20an%20amazing%20day!%20%0A%0A%3CInsert%20name%20here%3E" rel="cc:morePermissions">
-                                here</a>. -->
                         </div>
                         <div class="column">
                             <hr>
@@ -756,19 +681,18 @@
                 </div>
             </div>
         </section>
-        <div id="hostBanner">
+        <!-- <div id="hostBanner">
             <figure class="image is-128x128" >
                 <a href="https://github.com/Tensounder54/Tensounder54.github.io">
                     <img src="http://datampi.org/images/hosted-on-github.png" alt="Hosted On GitHub">
                 </a>
             </figure>
-        </div>
+        </div> -->
         <div id="menu">
             <div class="container">
                 <div class="columns is-mobile">
                     <div class="column is-one-half">
                         <ul>
-                            <!-- <li><a href="#" class="Disabled button is-unselectable" disabled>Menu</a></li> -->
                             <li><a href="#header" class="button is-warning is-unselectable">Home</a></li>
                             <li><a href="#teams-info" class="button is-info is-unselectable">Resources</a></li>
                             <li><a href="#teams-list" class="button is-link is-unselectable">Our Teams</a></li>
