--- a/discord/no-decay/30doc/index.html
+++ b/discord/no-decay/30doc/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../../../resources/css/discord/no-decay/30doc.css">
-		<link rel="stylesheet" href="../../../resources/css/libraries/bulma.min.css">
+		<link rel="stylesheet" href="../../../resources/css/libraries/bulma-0.9.4/css/bulma.min.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
 		<script src="../../../resources/js/main.js"></script>
 	</head>
