--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -10,7 +10,7 @@
         <meta content="No Decay" property="og:site_name">
         <meta content='https://cdn.discordapp.com/icons/457633643880382464/2ce92181d0f0f538798e2dc1f9ccfc76.webp' property='og:image'>
         <meta name="theme-color" content="#FFDD57">
-		<link rel="stylesheet" href="../../resources/css/libraries/bulma.min.css">
+		<link rel="stylesheet" href="../../resources/css/libraries/bulma-0.9.4/css/bulma.min.css">
 		<link rel="stylesheet" href="../../resources/css/discord/no-decay/noDecaySite.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
 		<script src="../../resources/js/noDecaySite.js"></script>
