--- a/discord/no-decay/tournaments/october-2019/index.html
+++ b/discord/no-decay/tournaments/october-2019/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="https://cdn.discordapp.com/icons/457633643880382464/2ce92181d0f0f538798e2dc1f9ccfc76.webp">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../../../../resources/css/libraries/bulma.min.css">
+		<link rel="stylesheet" href="../../../../resources/css/libraries/bulma-0.9.4/css/bulma.min.css">
         <link rel="stylesheet" href="../../../../resources/css/discord/no-decay/noDecayTournaments.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
 		<script src="../../../../resources/js/noDecaySite.js"></script>
