Update talent calc with new icon and body

--- a/projects/wow/talent-calc/index.html
+++ b/projects/wow/talent-calc/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>Death Knight Concept - T54</title>
-		<link rel="icon" href="https://wow.zamimg.com/images/wow/icons/large/spell_deathknight_classicon.jpg">
+		<title>WoW Talent Calculator - T54</title>
+		<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/7/76/W_in_a_Circle.svg">
+        <!--License for icon: https://en.wikipedia.org/wiki/File:W_in_a_Circle.svg-->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../../../resources/css/libraries/bulma-0.9.4/css/bulma.min.css">
@@ -13,68 +14,20 @@
         <script src="https://wow.zamimg.com/js/tooltips.js"></script>
 	</head>
 	<body>
-        <section id="header" class="hero has-background-dark is-medium">
+        <section id="header" class="hero has-background-link-dark is-small">
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title is-1">
                         WoW Talent Calculator
                     </h1>
-                    <h2 class="subtitle is-3">
-                        A Concept 
-                    </h2>
-                    <a href="#calc"><img src="https://cdn.discordapp.com/attachments/549305614241628161/556162398239588382/enter.png" alt="No Decay Enter Server Banner" /></a>
+                    <hr class="has-background-grey-darker">
                 </div>
             </div>
         </section>
-        <section id="calc" class="hero is-info is-fullheight">
+        <section id="calc" class="hero has-background-grey-dark is-fullheight">
             <div class="hero-body">
                 <div class="container">
-                    <h1 class="title is-2">Resources</h1>
-                    <hr>
-                    <h2 class="subtitle is-4">Teams</h2>
-                    <img src="https://cdn.discordapp.com/attachments/549305614241628161/556160800998555649/beginner.png" alt="No Decay Beginner Banner" />
-                    <p>
-                        The server currently has three beginner teams. They are always on the lookout for players and subs, so if you’re interested, 
-                        submit one of our applications (linked further down) and get involved. Being active on the server is the best way for teams 
-                        and players to get to know you, and that’s usually the best in.
-                    </p>
-                    <br>
-                    <p>New additions to these teams are required to be under 2500 SR to allow them space to grow.</p>
-                    <br>
-                    <p>
-                        If you ever manage to get 6 players together, one of who is a willing team captain, contact one of the admins and we can set 
-                        up all the channels you need to form your own team! We can also try and hook you up with a coach if required.
-                    </p>
-                    <img src="https://cdn.discordapp.com/attachments/549305614241628161/556161086823596032/intermediate.png" alt="No Decay Intermediate Banner" />
-                    <p>
-                        The intermediate teams sit directly above the beginner teams and are designed for players whose mechanical skills, game sense 
-                        or knowledge of the game has lifted them out of the beginner ranks. Somewhere for the players on the beginner teams to aim for; 
-                        these teams are more competitive, and the players are expected to contribute to the improvement of the lower SR players on the 
-                        server. This can be done through a wide variety of methods: being a good role model, giving advice, helping with coaching/VOD 
-                        reviews, or simply allowing spectators in their scrims.
-                    </p>
-                    <hr>
-                    <h2 class="subtitle is-4">VODs</h2>
-                    <p>
-                        In addition to the teams, there are other ways to improve - VOD reviews, strat theory, shotcalling advice, 1-on-1 coaching 
-                        sessions and various server events.
-                    </p>
-                    <br>
-                    <p>
-                        If you're interested in personal coaching, the best way to request it is through 
-                        <a href="https://discordapp.com/channels/457633643880382464/549305614241628161/556161172961755176"><code>#vod-reviews-and-coaching</code></a>. 
-                        You are welcome 
-                        to ping the <code>@VOD/1-on-1 Coach</code> role when asking for a review, but please only do it once per VOD, and a maximum of once per day.
-                    </p>
-                    <hr>
-                    <h2 class="subtitle is-4">Puggers</h2>
-                    <p>
-                        PUGs can be run at any time on the server. If you're interested in PUGs, be sure to get the PUG role at the bottom of this channel! 
-                        We currently do not run official PUGs, however you're always welcome to run your own, 
-                        just leave a message in the 
-                        <a href="https://discordapp.com/channels/457633643880382464/496043546114260994/566967142407208961"><code>discussion</code></a> 
-                        channel asking for players.
-                    </p>
+                                        
                 </div>
             </div>
         </section>
@@ -138,12 +91,5 @@
                 </div>
             </div>
         </section>
-        <div id="hostBanner">
-            <figure class="image is-128x128" >
-                <a class= href="https://github.com/Tensounder54/Tensounder54.github.io">
-                    <img src="http://datampi.org/images/hosted-on-github.png" alt="Hosted On GitHub">
-                </a>
-            </figure>
-        </div>
     </body>
 </html>
